# agent-knocks

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.ps1  install.cmd  install.ps1  package.ps1  run-tests.ps1  uninstall.cmd  uninstall.ps1
hooks/: codex-notify-chain.ps1  codex-setup.md  generic-setup.md
legacy/csharp/: install.cmd  install.ps1  uninstall.cmd  uninstall.ps1
legacy/csharp/src/: Core.cs
rust/: Cargo.toml  install.ps1  uninstall.ps1
rust/src/: core.rs  main.rs  tray.rs
src/: AgentKnocks.cs  AgentPing.cs  AgentStatusLight.cs  Core.cs  app.rs  core.rs  main.rs  tray.rs
tests/: Tests.cs
